--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "target": "ES5",
     "lib": ["es5", "es2015", "dom"],
     "jsx": "react",
